Coming soon I am going to finish this project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 <body>
 
 	<div class="site-container">
+		<div class="menu">
+			<div class="menu__close--btn">
+				<button class="menu__close btn__reset" aria-label="close menu">
+					<span class="menu__close--line"></span>
+					<span class="menu__close--line"></span>
+				</button>
+			</div>
+			<nav class="menu__nav">
+				<ul class="menu__list">
+					<li class="menu__item"><a href="#" class="menu__link">Become a travel</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Featured stories</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Featured Videos</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Newsletter</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Inspirations</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
+				</ul>
+			</nav>
+		</div>
 		<header class="header">
 			<div class="container header__container flex">
 				<ul class="header__social social">
@@ -31,7 +49,7 @@
 		<main class="main">
 			<section class="first">
 				<div class="container first__container">
-					<a href="#" class="first__link">New Book</a>
+					<a href="#" class="link_of_featured first__link">New Book</a>
 					<h1 class="first__title">Mother Earth Hosts Our Travels</h1>
 					<p class="first__descr">
 						There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete
@@ -192,7 +210,197 @@
 					</div>
 				</div>
 			</section>
+			<section class="news-letter">
+				<div class="container">
+					<div class="news-letter__content">
+						<div class="news-letter__text">
+							<h2 class="news-letter__title section__title">Sign Up Our Newsletter</h2>
+							<p class="news-letter__descr">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent.</p>
+						</div>
+						<form action="" class="news-letter__form">
+							<input type="text" class="input-reset news-letter__styleOfInput" name="name" placeholder="Name">
+							<input type="email" class="input-reset news-letter__styleOfInput" name="email" placeholder="Email">
+							<input type="tel" class="input-reset news-letter__styleOfInput" name="tel" placeholder="Phone Number">
+							<button class="btn btn__reset subscribe-form__btn">Sign Up Now</button>
+						</form>
+					</div>
+				</div>
+			</section>
+			<section class="inspirations">
+				<div class="container">
+					<h2 class="section__title section__title--center inspirations-title">
+						Inspirations
+					</h2>
+					<p class="inspirations-descr">
+						The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
+					</p>
+					<ul class="grid inspirations-list">
+						<li class="inspirations-item insp-item__big insp-item__1">
+							<a href="#" class="link_of_featured insp-item__link">Featured</a>
+							<div class="insp-text">
+								<a href="#" class="insp__category">Destinations</a>
+								<h3 class="insp-item__title">A Guide To Rocky Mountain Vacations</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Mountain--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Mountain--2.jpg" alt="human-2">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Mountain--3.jpg" alt="human-3">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item__2">
+							<div class="button-insp__play">
+								<button class="btn__reset insp-item__play" aria-label="Play video"></button>
+							</div>
+							<div class="insp-text">
+								<a href="#" class="insp__category">Destinations</a>
+								<h3 class="insp-item__title">Traveling To Barcelona</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Barca--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Barca--2.jpg" alt="human-2">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item--bigHeight insp-item__3">
+							<div class="insp-text">
+								<a href="#" class="insp__category">Destinations</a>
+								<h3 class="insp-item__title">Party Jokes Startling But Unnecessary</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Unnecssary--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Unnecssary--2.jpg" alt="human-2">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item--bigHeight insp-item__4">
+							<div class="insp-text">
+								<h3 class="insp-item__title">Maui By Air The Best Way Around The Island</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Maui--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Maui--2.jpg" alt="human-2">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item--bigHeight insp-item__5">
+							<div class="insp-text">
+								<h3 class="insp-item__title">Maui By Air The Best Way Around The Island</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Man--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_man--2.jpg" alt="human-2">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item__6">
+							<div class="button-insp__play">
+								<button class="btn__reset insp-item__play" aria-label="Play video"></button>
+							</div>
+							<div class="insp-text">
+								<a href="#" class="insp__category">Destinations</a>
+								<h3 class="insp-item__title">Traveling To Barcelona</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_TRtoBarc--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_TRtoBarc--2.jpg" alt="human-2">
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="inspirations-item insp-item__big insp-item__7">
+							<a href="#" class="link_of_featured insp-item__link">Featured</a>
+							<div class="insp-text">
+								<h3 class="insp-item__title">A Guide To Rocky Mountain Vacations</h3>
+								<ul class="insp-item__people">
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Vacations--1.jpg" alt="human-1">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Vacations--2.jpg" alt="human-2">
+									</li>
+									<li class="insp-item__people--img">
+										<img src="img/SVG/insp_Vacations--3.jpg" alt="human-3">
+									</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
+		<footer class="footer">
+			<div class="container footer__container flex">
+				<nav class="footer__column">
+					<h2 class="footer__title">Company</h2>
+					<ul class="footer__list">
+						<div class="footer__item"><a href="#" class="footer__link">About</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Press</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Blog</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Careers</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Security</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Driver center</a></div>
+					</ul>
+				</nav>
+				<nav class="footer__column">
+					<h2 class="footer__title">Information</h2>
+					<ul class="footer__list">
+						<div class="footer__item"><a href="#" class="footer__link">Our Story</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Recipes</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Nutrition</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Resources</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Newsletter</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Contact</a></div>
+					</ul>
+				</nav>
+				<nav class="footer__column">
+					<h2 class="footer__title">Information</h2>
+					<ul class="footer__list">
+						<div class="footer__item"><a href="#" class="footer__link">Customer service</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Recommended a restoraunt</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Signup a restoraunt</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Jobs</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Press</a></div>
+						<div class="footer__item"><a href="#" class="footer__link">Terms of use</a></div>
+					</ul>
+				</nav>
+				<div class="footer__column">
+					<h2 class="footer__title">Subscribe now</h2>
+					<form action="#" class="subs-form">
+						<input type="email" name="email" class="subs-form__field" placeholder="Your email">
+						<button class="btn__reset btn subs-form__btn">Subscribe now</button>
+					</form>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="container bottom__footer--container flex">
+					<small class="footer__copy">&copy; 2019 Mass Impressions. Designed by Tran Mau Tri Tam for Mass Impressions. All rights reserved.</small>
+					<ul class="footer-bottom__links flex">
+						<li class="footer-bottom__links--item"><a href="#" class="footer-bottom__link">Terms of service</a></li>
+						<li class="footer-bottom__links--item"><a href="#" class="footer-bottom__link">Privacy Policy</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script src="js/script.js"></script>
