--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div class="site-container">
-		<div class="menu">
+		<div class="menu d-none">
 			<div class="menu__close--btn">
 				<button class="menu__close btn__reset" aria-label="close menu">
 					<span class="menu__close--line"></span>
@@ -63,6 +63,8 @@
 						<div class="first__slider main-slider">
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
+									<button class="first__slider-btn btn__reset btn-left"></button>
+									<button class="first__slider-btn btn__reset btn-right"></button>
 									<div class="swiper-slide">
 										<div class="main-slider__media">
 											<img src="img/first-slider/slide-mountains.jpg" alt="Mountains">
@@ -71,8 +73,23 @@
 											wonderful moutain
 										</div>
 									</div>
-									<div class="swiper-slide"></div>
-									<div class="swiper-slide"></div>
+									<div class="swiper-slide">
+										<div class="main-slider__media">
+											<button class="main-slider__play btn__reset"></button>
+											<video src="img/videos/2.mp4" muted playsinline></video>
+										</div>
+										<div class="main-slider__text">
+											Mountain in Ukraine
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="main-slider__media">
+											<img src="img/first-slider/slide-mountains.jpg" alt="Mountains">
+										</div>
+										<div class="main-slider__text">
+											Carpatu
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
