--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
 <body>
 
 	<div class="site-container">
+		<div class="modals">
+			<div class="modal-overlay">
+				<div class="modal modal--1" data-target="one">
+					<div class="modal__books">
+
+						<div class="read__books">
+							<div class="read__book--title">Прочитанные книги</div>
+							<ul class="read__book--list">
+								<li class="read__book--item">
+									Мастер и Маргарита
+									<div class="read__book--delete hide"></div>
+								</li>
+								<li class="read__book--item">
+									Рассия
+									<div class="read__book--delete hide"></div>
+								</li>
+								<li class="read__book--item">
+									Russian federation
+									<div class="read__book--delete hide"></div>
+								</li>
+								<li class="read__book--item">
+									Kazahstan
+									<div class="read__book--delete hide"></div>
+								</li>
+							</ul>
+						</div>
+
+						<div class="add__books">
+							<div class="add__book--title">Добавить книги</div>
+							<form action="" class="add__book--form">
+								<input type="search" class="add__book--field input-reset" placeholder="Write books...">
+								<button type="submit" class="add__book--send btn__reset" aria-label="Search stories">Отправить</button>
+							</form>
+						</div>
+
+					</div>
+				</div>
+				<div class="modal modal--2" data-target="two">
+					Окно №2
+				</div>
+			</div>
+		</div>
+
 		<div class="menu d-none">
 			<div class="menu__close--btn">
 				<button class="menu__close btn__reset" aria-label="close menu">
@@ -21,15 +64,32 @@
 			</div>
 			<nav class="menu__nav">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="#" class="menu__link">Become a travel</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Featured stories</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Featured Videos</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Newsletter</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Inspirations</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
+					<li class="menu__item"><a href="#becomeTravel" class="menu__link">Become a travel</a></li>
+					<li class="menu__item"><a href="#featuredStories" class="menu__link">Featured stories</a></li>
+					<li class="menu__item"><a href="#featuredVideos" class="menu__link">Featured Videos</a></li>
+					<li class="menu__item"><a href="#newsLetter" class="menu__link">Newsletter</a></li>
+					<li class="menu__item"><a href="#inspirations" class="menu__link">Inspirations</a></li>
+					<li class="menu__item"><a href="#contacts" class="menu__link">Contacts</a></li>
 				</ul>
 			</nav>
 		</div>
+
+		<!-- scroll top -->
+
+		<div class="scroll-up">
+			<svg class="scroll-up__svg" viewBox="-2 -2 52 52">
+				<path class="scroll-up__svg--path"
+					d="
+						M24, 0
+						a24,24 0 0,1 0,48
+						a24,24 0 0,1 0,-48
+					"
+				/>
+			</svg>
+		</div>
+
+		<!-- scroll top end -->
+
 		<header class="header">
 			<div class="container header__container flex">
 				<ul class="header__social social">
@@ -48,14 +108,14 @@
 			</div>
 		</header>
 		<main class="main">
-			<section class="first">
+			<section class="first" id="becomeTravel">
 				<div class="container first__container">
 					<a href="#" class="link_of_featured first__link">New Book</a>
 					<h1 class="first__title">Mother Earth Hosts Our Travels</h1>
 					<p class="first__descr">
 						There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete
 					</p>
-					<button class="first__btn btn__reset">Buy the Book</button>
+					<button class="first__btn btn__reset btn__modal" data-path="one">Buy the Book</button>
 					<div class="fisrt__bottom">
 						<form action="/" class="fisrt__form search-form">
 							<input type="search" class="search-form__field" placeholder="Search stories">
@@ -132,13 +192,13 @@
 				</div>
 			</section>
 
-			<section class="featured">
+			<section class="featured" id="featuredStories">
 				<div class="container featured__container">
 					<article class="featured__article blog-article">
 						<a href="#" class="blog__article-category">Feartured</a>
 						<h3 class="blog__article-title">How To Fly A Private Jet On Your Next Trip</h3>
 						<p class="blog__article-descr">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.</p>
-						<a href="#" class="blog__article-link">Read Article</a>
+						<button class="blog__article-link btn__modal" data-path="two">Read Article</button>
 					</article>
 				</div>
 				<div class="featured__burger--show">
@@ -211,7 +271,7 @@
 				</div>
 			</section>
 
-			<section class="featured__videos">
+			<section class="featured__videos" id="featuredVideos">
 				<div class="container featured__videos-container">
 					<h2 class="featured__videos-title section-title section__title--center">
 						Featured Videos
@@ -243,7 +303,8 @@
 					</div>
 				</div>
 			</section>
-			<section class="news-letter">
+
+			<section class="news-letter" id="newsLetter">
 				<div class="container">
 					<div class="news-letter__content">
 						<div class="news-letter__text">
@@ -259,7 +320,8 @@
 					</div>
 				</div>
 			</section>
-			<section class="inspirations">
+
+			<section class="inspirations" id="inspirations">
 				<div class="container">
 					<h2 class="section__title section__title--center inspirations-title">
 						Inspirations
@@ -381,7 +443,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer"  id="contacts">
 			<div class="container footer__container flex">
 				<nav class="footer__column">
 					<h2 class="footer__title">Company</h2>
