--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<div class="add__book--title">Добавить книги</div>
 							<form action="" class="add__book--form">
 								<input type="search" class="add__book--field input-reset" placeholder="Write books...">
+								<p class="add__book--limit d-hide__right">У вас слишком много фильмов удалите ненужный чтобы записать поважнее</p>
 								<button type="submit" class="add__book--send btn__reset" aria-label="Search stories">Отправить</button>
 							</form>
 						</div>
